// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MsLayout 组件 demo 测试 正确渲染 MsLayout error.tsx 1`] = `
<div>
  <div
    class="ms-layout"
    style="height: calc(100vh - 0px);"
  >
    <div
      class="ms-slider"
      style="width: 184px;"
    >
      <div
        class="ms-slider-area "
        style="width: 100%;"
      >
        <h2
          class="ms-main-title"
          style="padding-left: 22px;"
        >
          文件存储NAS
        </h2>
        <div
          class="ms-menu"
        >
          <ul
            class="ant-menu ant-menu-root ant-menu-inline ant-menu-light"
            data-menu-list="true"
            role="menu"
            style="border-right: 0;"
            tabindex="0"
          >
            <li
              class="ant-menu-item ant-menu-item-selected ant-menu-item-only-child"
              data-is-child-page="false"
              data-menu-id="rc-menu-uuid-test-/components/ms-layout"
              role="menuitem"
              style="padding-left: 12px;"
              tabindex="-1"
            >
              <span
                class="ant-menu-title-content"
              >
                文件系统列表
              </span>
            </li>
            <li
              class="ant-menu-item ant-menu-item-only-child"
              data-is-child-page="false"
              data-menu-id="rc-menu-uuid-test-/monitor"
              role="menuitem"
              style="padding-left: 12px;"
              tabindex="-1"
            >
              <span
                class="ant-menu-title-content"
              >
                监控
              </span>
            </li>
          </ul>
          <div
            aria-hidden="true"
            style="display: none;"
          />
        </div>
      </div>
      <div
        class="ms-expansion"
      >
        <span
          aria-label="menu-fold"
          class="anticon anticon-menu-fold"
          role="img"
          style="font-size: 16px;"
        >
          <svg
            aria-hidden="true"
            data-icon="menu-fold"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M408 442h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8zm-8 204c0 4.4 3.6 8 8 8h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56zm504-486H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 632H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM115.4 518.9L271.7 642c5.8 4.6 14.4.5 14.4-6.9V388.9c0-7.4-8.5-11.5-14.4-6.9L115.4 505.1a8.74 8.74 0 000 13.8z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="ms-main"
    >
      <div
        class="ms-breadcrumb"
      >
        <nav
          class="ant-breadcrumb"
        >
          <ol>
            <li>
              <span
                class="ant-breadcrumb-link"
              >
                <a
                  href="/"
                >
                  <svg
                    height="14"
                    style="position: relative; top: 2px;"
                    version="1.1"
                    viewBox="0 0 1024 1024"
                    width="14"
                  >
                    <path
                      d="M365.714286 563.2a21.942857 21.942857 0 0 0-21.942857 21.942857v270.628572H168.228571V367.616L512 117.613714l343.771429 250.002286V855.771429H680.228571V585.142857a21.942857 21.942857 0 0 0-21.942857-21.942857H365.714286zM520.630857 6.290286a14.628571 14.628571 0 0 0-17.261714 0l-424.228572 308.516571A14.628571 14.628571 0 0 0 73.142857 326.656V936.228571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V665.6a7.314286 7.314286 0 0 1 7.314286-7.314286h131.657142a7.314286 7.314286 0 0 1 7.314286 7.314286v270.628571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V326.656a14.628571 14.628571 0 0 0-5.997714-11.849143L520.630857 6.290286z"
                      fill="#90969E"
                      p-id="2079"
                    />
                    <path
                      d="M365.714286 563.2a21.942857 21.942857 0 0 0-21.942857 21.942857v270.628572H168.228571V367.616L512 117.613714l343.771429 250.002286V855.771429H680.228571V585.142857a21.942857 21.942857 0 0 0-21.942857-21.942857H365.714286zM520.630857 6.290286a14.628571 14.628571 0 0 0-17.261714 0l-424.228572 308.516571A14.628571 14.628571 0 0 0 73.142857 326.656V936.228571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V665.6a7.314286 7.314286 0 0 1 7.314286-7.314286h131.657142a7.314286 7.314286 0 0 1 7.314286 7.314286v270.628571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V326.656a14.628571 14.628571 0 0 0-5.997714-11.849143L520.630857 6.290286z"
                      fill="#90969E"
                      p-id="2080"
                    />
                  </svg>
                </a>
              </span>
              <span
                class="ant-breadcrumb-separator"
              >
                /
              </span>
            </li>
          </ol>
        </nav>
      </div>
      <div
        class="ms-content-wrap"
      >
        <div
          class="ms-content"
        >
          <div
            class="ant-card ant-card-bordered"
          >
            <div
              class="ant-card-body"
              style="padding: 20px;"
            >
              <div
                class="ms-page"
              >
                <button
                  class="ant-btn ant-btn-primary ant-btn-dangerous"
                  style="margin-bottom: 10px;"
                  type="button"
                >
                  <span>
                    触发 JSX 渲染异常
                  </span>
                </button>
                <div
                  class=""
                >
                  <div
                    class="ms-sub-page"
                  >
                    <div
                      class="ms-title-container"
                    >
                      <div
                        class="ms-title"
                      >
                        <div
                          class="ant-skeleton ant-skeleton-element ant-skeleton-active"
                        >
                          <span
                            class="ant-skeleton-input"
                            style="height: 22px; display: flex;"
                          />
                        </div>
                      </div>
                      <div
                        class="ant-skeleton ant-skeleton-element ant-skeleton-active"
                      >
                        <span
                          class="ant-skeleton-input"
                          style="height: 22px; display: flex;"
                        />
                      </div>
                    </div>
                    <div
                      class="ant-skeleton ant-skeleton-active"
                    >
                      <div
                        class="ant-skeleton-content"
                      >
                        <h3
                          class="ant-skeleton-title"
                          style="width: 38%;"
                        />
                        <ul
                          class="ant-skeleton-paragraph"
                        >
                          <li />
                          <li />
                          <li
                            style="width: 61%;"
                          />
                        </ul>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MsLayout 组件 demo 测试 正确渲染 MsLayout group.tsx 1`] = `
<div>
  <div
    style="position: relative;"
  >
    <div
      class="ms-layout"
      style="height: calc(100vh - 0px);"
    >
      <div
        class="ms-slider"
        style="width: 184px;"
      >
        <div
          class="ms-slider-area "
          style="width: 100%;"
        >
          <h2
            class="ms-main-title"
            style="padding-left: 22px;"
          >
            专有网络VPC
          </h2>
          <div
            class="ms-menu"
          >
            <ul
              class="ant-menu ant-menu-root ant-menu-inline ant-menu-light"
              data-menu-list="true"
              role="menu"
              style="border-right: 0;"
              tabindex="0"
            >
              <li
                class="ant-menu-item ant-menu-item-only-child"
                data-is-child-page="false"
                data-menu-id="rc-menu-uuid-test-/~demos"
                role="menuitem"
                style="padding-left: 12px;"
                tabindex="-1"
              >
                <span
                  class="ant-menu-title-content"
                >
                  专有网络
                </span>
              </li>
              <li
                class="ant-menu-item ant-menu-item-selected ant-menu-item-only-child"
                data-is-child-page="false"
                data-menu-id="rc-menu-uuid-test-/~demos/mslayout-demo-roles"
                role="menuitem"
                style="padding-left: 12px;"
                tabindex="-1"
              >
                <span
                  class="ant-menu-title-content"
                >
                  子网
                </span>
              </li>
              <li
                class="ant-menu-item ant-menu-item-only-child"
                data-is-child-page="false"
                data-menu-id="rc-menu-uuid-test-/~demos/mslayout-demo-roles22"
                role="menuitem"
                style="padding-left: 12px;"
                tabindex="-1"
              >
                <span
                  class="ant-menu-title-content"
                >
                  路由表
                </span>
              </li>
              <li
                class="ant-menu-submenu ant-menu-submenu-inline"
                data-is-child-page="false"
                role="none"
              >
                <div
                  aria-controls="rc-menu-uuid-test-/~demos/mslayout-demo-nat-popup"
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="ant-menu-submenu-title"
                  data-menu-id="rc-menu-uuid-test-/~demos/mslayout-demo-nat"
                  role="menuitem"
                  style="padding-left: 12px;"
                  tabindex="-1"
                >
                  <span
                    class="ant-menu-title-content"
                  >
                    NAT网关
                  </span>
                  <i
                    class="ant-menu-submenu-arrow"
                  />
                </div>
              </li>
              <li
                class="ant-menu-item-group"
                data-is-child-page="false"
                role="presentation"
              >
                <div
                  class="ant-menu-item-group-title"
                  role="presentation"
                  title="公网访问"
                >
                  公网访问
                </div>
                <ul
                  class="ant-menu-item-group-list"
                  role="group"
                >
                  <li
                    class="ant-menu-item ant-menu-item-only-child"
                    data-is-child-page="false"
                    data-menu-id="rc-menu-uuid-test-/~demos2/mslayout-demo-roles"
                    role="menuitem"
                    style="padding-left: 12px;"
                    tabindex="-1"
                  >
                    <span
                      class="ant-menu-title-content"
                    >
                      弹性公网IP
                    </span>
                  </li>
                </ul>
              </li>
              <li
                class="ant-menu-item-group"
                data-is-child-page="false"
                role="presentation"
              >
                <div
                  class="ant-menu-item-group-title"
                  role="presentation"
                  title="网监互联"
                >
                  网监互联
                </div>
                <ul
                  class="ant-menu-item-group-list"
                  role="group"
                >
                  <li
                    class="ant-menu-item ant-menu-item-only-child"
                    data-is-child-page="false"
                    data-menu-id="rc-menu-uuid-test-/~demos2/vpn"
                    role="menuitem"
                    style="padding-left: 12px;"
                    tabindex="-1"
                  >
                    <span
                      class="ant-menu-title-content"
                    >
                      VPN网关
                    </span>
                  </li>
                  <li
                    class="ant-menu-item ant-menu-item-only-child"
                    data-is-child-page="false"
                    data-menu-id="rc-menu-uuid-test-/~demos2/dc"
                    role="menuitem"
                    style="padding-left: 12px;"
                    tabindex="-1"
                  >
                    <span
                      class="ant-menu-title-content"
                    >
                      专线网关
                    </span>
                  </li>
                </ul>
              </li>
            </ul>
            <div
              aria-hidden="true"
              style="display: none;"
            />
          </div>
        </div>
        <div
          class="ms-expansion"
        >
          <span
            aria-label="menu-fold"
            class="anticon anticon-menu-fold"
            role="img"
            style="font-size: 16px;"
          >
            <svg
              aria-hidden="true"
              data-icon="menu-fold"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M408 442h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8zm-8 204c0 4.4 3.6 8 8 8h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56zm504-486H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 632H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM115.4 518.9L271.7 642c5.8 4.6 14.4.5 14.4-6.9V388.9c0-7.4-8.5-11.5-14.4-6.9L115.4 505.1a8.74 8.74 0 000 13.8z"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="ms-main"
      >
        <div
          class="ms-breadcrumb"
        >
          <nav
            class="ant-breadcrumb"
          >
            <ol>
              <li>
                <span
                  class="ant-breadcrumb-link"
                >
                  <a
                    href="/"
                  >
                    <svg
                      height="14"
                      style="position: relative; top: 2px;"
                      version="1.1"
                      viewBox="0 0 1024 1024"
                      width="14"
                    >
                      <path
                        d="M365.714286 563.2a21.942857 21.942857 0 0 0-21.942857 21.942857v270.628572H168.228571V367.616L512 117.613714l343.771429 250.002286V855.771429H680.228571V585.142857a21.942857 21.942857 0 0 0-21.942857-21.942857H365.714286zM520.630857 6.290286a14.628571 14.628571 0 0 0-17.261714 0l-424.228572 308.516571A14.628571 14.628571 0 0 0 73.142857 326.656V936.228571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V665.6a7.314286 7.314286 0 0 1 7.314286-7.314286h131.657142a7.314286 7.314286 0 0 1 7.314286 7.314286v270.628571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V326.656a14.628571 14.628571 0 0 0-5.997714-11.849143L520.630857 6.290286z"
                        fill="#90969E"
                        p-id="2079"
                      />
                      <path
                        d="M365.714286 563.2a21.942857 21.942857 0 0 0-21.942857 21.942857v270.628572H168.228571V367.616L512 117.613714l343.771429 250.002286V855.771429H680.228571V585.142857a21.942857 21.942857 0 0 0-21.942857-21.942857H365.714286zM520.630857 6.290286a14.628571 14.628571 0 0 0-17.261714 0l-424.228572 308.516571A14.628571 14.628571 0 0 0 73.142857 326.656V936.228571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V665.6a7.314286 7.314286 0 0 1 7.314286-7.314286h131.657142a7.314286 7.314286 0 0 1 7.314286 7.314286v270.628571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V326.656a14.628571 14.628571 0 0 0-5.997714-11.849143L520.630857 6.290286z"
                        fill="#90969E"
                        p-id="2080"
                      />
                    </svg>
                  </a>
                </span>
                <span
                  class="ant-breadcrumb-separator"
                >
                  /
                </span>
              </li>
            </ol>
          </nav>
        </div>
        <div
          class="ms-content-wrap"
        >
          <div
            class="ms-content"
          >
            <div
              class="ant-card ant-card-bordered"
              style="height: 500px;"
            >
              <div
                class="ant-card-body"
              >
                我是内容渲染区域
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MsLayout 组件 demo 测试 正确渲染 MsLayout icon.tsx 1`] = `
<div>
  <div
    style="position: relative;"
  >
    <div
      class="ms-layout ms-layout-demo"
      style="height: calc(100vh - 0px);"
    >
      <div
        class="ms-slider"
        style="width: 184px;"
      >
        <div
          class="ms-slider-area "
          style="width: 100%;"
        >
          <h2
            class="ms-main-title"
            style="padding-left: 22px;"
          >
            文件存储NAS
          </h2>
          <div
            class="ms-menu"
          >
            <ul
              class="ant-menu ant-menu-root ant-menu-inline ant-menu-light"
              data-menu-list="true"
              role="menu"
              style="border-right: 0;"
              tabindex="0"
            >
              <li
                class="ant-menu-item ant-menu-item-selected"
                data-is-child-page="false"
                data-menu-id="rc-menu-uuid-test-/file/filesystem"
                role="menuitem"
                style="padding-left: 12px;"
                tabindex="-1"
              >
                <span
                  class="anticon ant-menu-item-icon"
                  role="img"
                />
                <span
                  class="ant-menu-title-content"
                >
                  文件系统列表
                </span>
              </li>
              <li
                class="ant-menu-item"
                data-is-child-page="false"
                data-menu-id="rc-menu-uuid-test-/monitor"
                role="menuitem"
                style="padding-left: 12px;"
                tabindex="-1"
              >
                <span
                  class="anticon ant-menu-item-icon"
                  role="img"
                />
                <span
                  class="ant-menu-title-content"
                >
                  监控
                </span>
              </li>
              <li
                class="ant-menu-submenu ant-menu-submenu-inline"
                data-is-child-page="false"
                role="none"
              >
                <div
                  aria-controls="rc-menu-uuid-test-/test-popup"
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="ant-menu-submenu-title"
                  data-menu-id="rc-menu-uuid-test-/test"
                  role="menuitem"
                  style="padding-left: 12px;"
                  tabindex="-1"
                >
                  <span
                    class="anticon ant-menu-item-icon"
                    role="img"
                  />
                  <span
                    class="ant-menu-title-content"
                  >
                    测试-展开
                  </span>
                  <i
                    class="ant-menu-submenu-arrow"
                  />
                </div>
              </li>
              <li
                class="ant-menu-item"
                data-is-child-page="true"
                data-menu-id="rc-menu-uuid-test-/file/accessGroup"
                role="menuitem"
                style="padding-left: 12px;"
                tabindex="-1"
              >
                <span
                  class="anticon ant-menu-item-icon"
                  role="img"
                />
                <span
                  class="ant-menu-title-content"
                >
                  权限组列表
                </span>
              </li>
            </ul>
            <div
              aria-hidden="true"
              style="display: none;"
            />
          </div>
        </div>
        <div
          class="ms-expansion"
        >
          <span
            aria-label="menu-fold"
            class="anticon anticon-menu-fold"
            role="img"
            style="font-size: 16px;"
          >
            <svg
              aria-hidden="true"
              data-icon="menu-fold"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M408 442h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8zm-8 204c0 4.4 3.6 8 8 8h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56zm504-486H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 632H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM115.4 518.9L271.7 642c5.8 4.6 14.4.5 14.4-6.9V388.9c0-7.4-8.5-11.5-14.4-6.9L115.4 505.1a8.74 8.74 0 000 13.8z"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="ms-main"
      >
        <div
          class="ms-breadcrumb"
        >
          <nav
            class="ant-breadcrumb"
          >
            <ol>
              <li>
                <span
                  class="ant-breadcrumb-link"
                >
                  <a
                    href="/"
                  >
                    <svg
                      height="14"
                      style="position: relative; top: 2px;"
                      version="1.1"
                      viewBox="0 0 1024 1024"
                      width="14"
                    >
                      <path
                        d="M365.714286 563.2a21.942857 21.942857 0 0 0-21.942857 21.942857v270.628572H168.228571V367.616L512 117.613714l343.771429 250.002286V855.771429H680.228571V585.142857a21.942857 21.942857 0 0 0-21.942857-21.942857H365.714286zM520.630857 6.290286a14.628571 14.628571 0 0 0-17.261714 0l-424.228572 308.516571A14.628571 14.628571 0 0 0 73.142857 326.656V936.228571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V665.6a7.314286 7.314286 0 0 1 7.314286-7.314286h131.657142a7.314286 7.314286 0 0 1 7.314286 7.314286v270.628571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V326.656a14.628571 14.628571 0 0 0-5.997714-11.849143L520.630857 6.290286z"
                        fill="#90969E"
                        p-id="2079"
                      />
                      <path
                        d="M365.714286 563.2a21.942857 21.942857 0 0 0-21.942857 21.942857v270.628572H168.228571V367.616L512 117.613714l343.771429 250.002286V855.771429H680.228571V585.142857a21.942857 21.942857 0 0 0-21.942857-21.942857H365.714286zM520.630857 6.290286a14.628571 14.628571 0 0 0-17.261714 0l-424.228572 308.516571A14.628571 14.628571 0 0 0 73.142857 326.656V936.228571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V665.6a7.314286 7.314286 0 0 1 7.314286-7.314286h131.657142a7.314286 7.314286 0 0 1 7.314286 7.314286v270.628571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V326.656a14.628571 14.628571 0 0 0-5.997714-11.849143L520.630857 6.290286z"
                        fill="#90969E"
                        p-id="2080"
                      />
                    </svg>
                  </a>
                </span>
                <span
                  class="ant-breadcrumb-separator"
                >
                  /
                </span>
              </li>
            </ol>
          </nav>
        </div>
        <div
          class="ms-content-wrap"
        >
          <div
            class="ms-content"
          >
            <div
              class="ant-card ant-card-bordered"
              style="height: 500px;"
            >
              <div
                class="ant-card-body"
              >
                我是内容渲染区域
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MsLayout 组件 demo 测试 正确渲染 MsLayout index.tsx 1`] = `
<div>
  <div
    class="ms-layout ms-layout-demo"
    style="height: calc(100vh - 0px);"
  >
    <div
      class="ms-slider"
      style="width: 184px;"
    >
      <div
        class="ms-slider-area "
        style="width: 100%;"
      >
        <h2
          class="ms-main-title"
          style="padding-left: 22px;"
        >
          文件存储NAS
        </h2>
        <div
          class="ms-menu"
        >
          <ul
            class="ant-menu ant-menu-root ant-menu-inline ant-menu-light"
            data-menu-list="true"
            role="menu"
            style="border-right: 0;"
            tabindex="0"
          >
            <li
              class="ant-menu-item ant-menu-item-only-child"
              data-is-child-page="false"
              data-menu-id="rc-menu-uuid-test-/~demos/mslayout-demo-__demo__"
              role="menuitem"
              style="padding-left: 12px;"
              tabindex="-1"
            >
              <span
                class="ant-menu-title-content"
              >
                文件系统列表
              </span>
            </li>
            <li
              class="ant-menu-item ant-menu-item-only-child"
              data-is-child-page="false"
              data-menu-id="rc-menu-uuid-test-/monitor"
              link="https://www.baidu.com"
              role="menuitem"
              style="padding-left: 12px;"
              tabindex="-1"
            >
              <span
                class="ant-menu-title-content"
              >
                <a
                  href="https://www.baidu.com"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  监控-跳转到新页面
                  <span
                    style="position: absolute; right: 15px;"
                  >
                    <span
                      aria-label="disconnect"
                      class="anticon anticon-disconnect"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="disconnect"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M832.6 191.4c-84.6-84.6-221.5-84.6-306 0l-96.9 96.9 51 51 96.9-96.9c53.8-53.8 144.6-59.5 204 0 59.5 59.5 53.8 150.2 0 204l-96.9 96.9 51.1 51.1 96.9-96.9c84.4-84.6 84.4-221.5-.1-306.1zM446.5 781.6c-53.8 53.8-144.6 59.5-204 0-59.5-59.5-53.8-150.2 0-204l96.9-96.9-51.1-51.1-96.9 96.9c-84.6 84.6-84.6 221.5 0 306s221.5 84.6 306 0l96.9-96.9-51-51-96.8 97zM260.3 209.4a8.03 8.03 0 00-11.3 0L209.4 249a8.03 8.03 0 000 11.3l554.4 554.4c3.1 3.1 8.2 3.1 11.3 0l39.6-39.6c3.1-3.1 3.1-8.2 0-11.3L260.3 209.4z"
                        />
                      </svg>
                    </span>
                  </span>
                </a>
              </span>
            </li>
            <li
              class="ant-menu-submenu ant-menu-submenu-inline"
              data-is-child-page="false"
              role="none"
            >
              <div
                aria-controls="rc-menu-uuid-test-/file/accessGroup-popup"
                aria-expanded="false"
                aria-haspopup="true"
                class="ant-menu-submenu-title"
                data-menu-id="rc-menu-uuid-test-/file/accessGroup"
                role="menuitem"
                style="padding-left: 12px;"
                tabindex="-1"
              >
                <span
                  class="ant-menu-title-content"
                >
                  权限组
                </span>
                <i
                  class="ant-menu-submenu-arrow"
                />
              </div>
            </li>
          </ul>
          <div
            aria-hidden="true"
            style="display: none;"
          />
        </div>
      </div>
      <div
        class="ms-expansion"
      >
        <span
          aria-label="menu-fold"
          class="anticon anticon-menu-fold"
          role="img"
          style="font-size: 16px;"
        >
          <svg
            aria-hidden="true"
            data-icon="menu-fold"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M408 442h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8zm-8 204c0 4.4 3.6 8 8 8h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56zm504-486H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 632H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM115.4 518.9L271.7 642c5.8 4.6 14.4.5 14.4-6.9V388.9c0-7.4-8.5-11.5-14.4-6.9L115.4 505.1a8.74 8.74 0 000 13.8z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="ms-main"
    >
      <div
        class="ms-breadcrumb"
      >
        <nav
          class="ant-breadcrumb"
        >
          <ol>
            <li>
              <span
                class="ant-breadcrumb-link"
              >
                <a
                  href="/"
                >
                  <svg
                    height="14"
                    style="position: relative; top: 2px;"
                    version="1.1"
                    viewBox="0 0 1024 1024"
                    width="14"
                  >
                    <path
                      d="M365.714286 563.2a21.942857 21.942857 0 0 0-21.942857 21.942857v270.628572H168.228571V367.616L512 117.613714l343.771429 250.002286V855.771429H680.228571V585.142857a21.942857 21.942857 0 0 0-21.942857-21.942857H365.714286zM520.630857 6.290286a14.628571 14.628571 0 0 0-17.261714 0l-424.228572 308.516571A14.628571 14.628571 0 0 0 73.142857 326.656V936.228571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V665.6a7.314286 7.314286 0 0 1 7.314286-7.314286h131.657142a7.314286 7.314286 0 0 1 7.314286 7.314286v270.628571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V326.656a14.628571 14.628571 0 0 0-5.997714-11.849143L520.630857 6.290286z"
                      fill="#90969E"
                      p-id="2079"
                    />
                    <path
                      d="M365.714286 563.2a21.942857 21.942857 0 0 0-21.942857 21.942857v270.628572H168.228571V367.616L512 117.613714l343.771429 250.002286V855.771429H680.228571V585.142857a21.942857 21.942857 0 0 0-21.942857-21.942857H365.714286zM520.630857 6.290286a14.628571 14.628571 0 0 0-17.261714 0l-424.228572 308.516571A14.628571 14.628571 0 0 0 73.142857 326.656V936.228571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V665.6a7.314286 7.314286 0 0 1 7.314286-7.314286h131.657142a7.314286 7.314286 0 0 1 7.314286 7.314286v270.628571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V326.656a14.628571 14.628571 0 0 0-5.997714-11.849143L520.630857 6.290286z"
                      fill="#90969E"
                      p-id="2080"
                    />
                  </svg>
                </a>
              </span>
              <span
                class="ant-breadcrumb-separator"
              >
                /
              </span>
            </li>
          </ol>
        </nav>
        <div>
          <div>
            支持插槽：
            <div
              class="ant-select ant-select-sm ant-select-single ant-select-show-arrow"
              style="width: 120px;"
            >
              <div
                class="ant-select-selector"
              >
                <span
                  class="ant-select-selection-search"
                >
                  <input
                    aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                    aria-autocomplete="list"
                    aria-controls="rc_select_TEST_OR_SSR_list"
                    aria-haspopup="listbox"
                    aria-owns="rc_select_TEST_OR_SSR_list"
                    autocomplete="off"
                    class="ant-select-selection-search-input"
                    id="rc_select_TEST_OR_SSR"
                    readonly=""
                    role="combobox"
                    style="opacity: 0;"
                    type="search"
                    unselectable="on"
                    value=""
                  />
                </span>
                <span
                  class="ant-select-selection-item"
                  title="Lucy"
                >
                  Lucy
                </span>
              </div>
              <span
                aria-hidden="true"
                class="ant-select-arrow"
                style="user-select: none;"
                unselectable="on"
              >
                <span
                  aria-label="down"
                  class="anticon anticon-down ant-select-suffix"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="down"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ms-content-wrap"
      >
        <div
          class="ms-content"
        >
          <div
            class="ant-card ant-card-bordered"
            style="height: 500px;"
          >
            <div
              class="ant-card-body"
            >
              我是内容渲染区域
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MsLayout 组件 demo 测试 正确渲染 MsLayout roles.tsx 1`] = `
<div>
  <div>
    <div
      class="ms-layout"
      style="height: calc(100vh - 0px);"
    >
      <div
        class="ms-slider"
        style="width: 184px;"
      >
        <div
          class="ms-slider-area "
          style="width: 100%;"
        >
          <h2
            class="ms-main-title"
            style="padding-left: 22px;"
          >
            文件存储NAS
          </h2>
          <div
            class="ms-menu"
          >
            <ul
              class="ant-menu ant-menu-root ant-menu-inline ant-menu-light"
              data-menu-list="true"
              role="menu"
              style="border-right: 0;"
              tabindex="0"
            >
              <li
                class="ant-menu-submenu ant-menu-submenu-inline ant-menu-submenu-selected"
                data-is-child-page="false"
                role="none"
              >
                <div
                  aria-controls="rc-menu-uuid-test-/~demos-popup"
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="ant-menu-submenu-title"
                  data-menu-id="rc-menu-uuid-test-/~demos"
                  role="menuitem"
                  style="padding-left: 12px;"
                  tabindex="-1"
                >
                  <span
                    class="ant-menu-title-content"
                  >
                    文件系统列表
                  </span>
                  <i
                    class="ant-menu-submenu-arrow"
                  />
                </div>
              </li>
              <li
                class="ant-menu-submenu ant-menu-submenu-inline"
                data-is-child-page="false"
                role="none"
              >
                <div
                  aria-controls="rc-menu-uuid-test-/~demos2-popup"
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="ant-menu-submenu-title"
                  data-menu-id="rc-menu-uuid-test-/~demos2"
                  role="menuitem"
                  style="padding-left: 12px;"
                  tabindex="-1"
                >
                  <span
                    class="ant-menu-title-content"
                  >
                    文件系统列表2
                  </span>
                  <i
                    class="ant-menu-submenu-arrow"
                  />
                </div>
              </li>
              <li
                class="ant-menu-item ant-menu-item-only-child"
                data-is-child-page="false"
                data-menu-id="rc-menu-uuid-test-/monitor"
                role="menuitem"
                style="padding-left: 12px;"
                tabindex="-1"
              >
                <span
                  class="ant-menu-title-content"
                >
                  监控
                </span>
              </li>
              <li
                class="ant-menu-item ant-menu-item-only-child"
                data-is-child-page="false"
                data-menu-id="rc-menu-uuid-test-/file/accessGroup"
                link="http://www.baidu.com"
                role="menuitem"
                style="padding-left: 12px;"
                tabindex="-1"
              >
                <span
                  class="ant-menu-title-content"
                >
                  <a
                    href="http://www.baidu.com"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    权限组列表
                    <span
                      style="position: absolute; right: 15px;"
                    >
                      <span
                        aria-label="disconnect"
                        class="anticon anticon-disconnect"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="disconnect"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M832.6 191.4c-84.6-84.6-221.5-84.6-306 0l-96.9 96.9 51 51 96.9-96.9c53.8-53.8 144.6-59.5 204 0 59.5 59.5 53.8 150.2 0 204l-96.9 96.9 51.1 51.1 96.9-96.9c84.4-84.6 84.4-221.5-.1-306.1zM446.5 781.6c-53.8 53.8-144.6 59.5-204 0-59.5-59.5-53.8-150.2 0-204l96.9-96.9-51.1-51.1-96.9 96.9c-84.6 84.6-84.6 221.5 0 306s221.5 84.6 306 0l96.9-96.9-51-51-96.8 97zM260.3 209.4a8.03 8.03 0 00-11.3 0L209.4 249a8.03 8.03 0 000 11.3l554.4 554.4c3.1 3.1 8.2 3.1 11.3 0l39.6-39.6c3.1-3.1 3.1-8.2 0-11.3L260.3 209.4z"
                          />
                        </svg>
                      </span>
                    </span>
                  </a>
                </span>
              </li>
            </ul>
            <div
              aria-hidden="true"
              style="display: none;"
            />
          </div>
        </div>
        <div
          class="ms-expansion"
        >
          <span
            aria-label="menu-fold"
            class="anticon anticon-menu-fold"
            role="img"
            style="font-size: 16px;"
          >
            <svg
              aria-hidden="true"
              data-icon="menu-fold"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M408 442h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8zm-8 204c0 4.4 3.6 8 8 8h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56zm504-486H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 632H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM115.4 518.9L271.7 642c5.8 4.6 14.4.5 14.4-6.9V388.9c0-7.4-8.5-11.5-14.4-6.9L115.4 505.1a8.74 8.74 0 000 13.8z"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="ms-main"
      >
        <div
          class="ms-breadcrumb"
        >
          <nav
            class="ant-breadcrumb"
          >
            <ol>
              <li>
                <span
                  class="ant-breadcrumb-link"
                >
                  <a
                    href="/"
                  >
                    <svg
                      height="14"
                      style="position: relative; top: 2px;"
                      version="1.1"
                      viewBox="0 0 1024 1024"
                      width="14"
                    >
                      <path
                        d="M365.714286 563.2a21.942857 21.942857 0 0 0-21.942857 21.942857v270.628572H168.228571V367.616L512 117.613714l343.771429 250.002286V855.771429H680.228571V585.142857a21.942857 21.942857 0 0 0-21.942857-21.942857H365.714286zM520.630857 6.290286a14.628571 14.628571 0 0 0-17.261714 0l-424.228572 308.516571A14.628571 14.628571 0 0 0 73.142857 326.656V936.228571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V665.6a7.314286 7.314286 0 0 1 7.314286-7.314286h131.657142a7.314286 7.314286 0 0 1 7.314286 7.314286v270.628571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V326.656a14.628571 14.628571 0 0 0-5.997714-11.849143L520.630857 6.290286z"
                        fill="#90969E"
                        p-id="2079"
                      />
                      <path
                        d="M365.714286 563.2a21.942857 21.942857 0 0 0-21.942857 21.942857v270.628572H168.228571V367.616L512 117.613714l343.771429 250.002286V855.771429H680.228571V585.142857a21.942857 21.942857 0 0 0-21.942857-21.942857H365.714286zM520.630857 6.290286a14.628571 14.628571 0 0 0-17.261714 0l-424.228572 308.516571A14.628571 14.628571 0 0 0 73.142857 326.656V936.228571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V665.6a7.314286 7.314286 0 0 1 7.314286-7.314286h131.657142a7.314286 7.314286 0 0 1 7.314286 7.314286v270.628571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V326.656a14.628571 14.628571 0 0 0-5.997714-11.849143L520.630857 6.290286z"
                        fill="#90969E"
                        p-id="2080"
                      />
                    </svg>
                  </a>
                </span>
                <span
                  class="ant-breadcrumb-separator"
                >
                  /
                </span>
              </li>
            </ol>
          </nav>
        </div>
        <div
          class="ms-content-wrap"
        >
          <div
            class="ms-content"
          >
            <div
              class="ant-card ant-card-bordered"
              style="height: 500px;"
            >
              <div
                class="ant-card-body"
              >
                <div
                  class="ant-radio-group ant-radio-group-solid"
                >
                  <label
                    class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
                  >
                    <span
                      class="ant-radio-button ant-radio-button-checked"
                    >
                      <input
                        checked=""
                        class="ant-radio-button-input"
                        type="radio"
                        value="admin"
                      />
                      <span
                        class="ant-radio-button-inner"
                      />
                    </span>
                    <span>
                      我是admin角色
                    </span>
                  </label>
                  <label
                    class="ant-radio-button-wrapper"
                  >
                    <span
                      class="ant-radio-button"
                    >
                      <input
                        class="ant-radio-button-input"
                        type="radio"
                        value="user"
                      />
                      <span
                        class="ant-radio-button-inner"
                      />
                    </span>
                    <span>
                      我是user角色
                    </span>
                  </label>
                  <label
                    class="ant-radio-button-wrapper"
                  >
                    <span
                      class="ant-radio-button"
                    >
                      <input
                        class="ant-radio-button-input"
                        type="radio"
                        value="admin2"
                      />
                      <span
                        class="ant-radio-button-inner"
                      />
                    </span>
                    <span>
                      我是admin2角色
                    </span>
                  </label>
                  <label
                    class="ant-radio-button-wrapper"
                  >
                    <span
                      class="ant-radio-button"
                    >
                      <input
                        class="ant-radio-button-input"
                        type="radio"
                        value="admin3"
                      />
                      <span
                        class="ant-radio-button-inner"
                      />
                    </span>
                    <span>
                      我是admin3角色
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
